# mini-ghc

./: .gitignore  Main.hs  StaticFlags.hs  Utilities.hs  mini-ghc.cabal
Core/: Data.hs  FreeVars.hs  Infer.hs  Parser.hs  Syntax.hs  Type.hs
examples/trivial/: Polymorphism.hs
