Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               mini-ghc
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/mini-ghc
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Small Haskell implementation for experimentation
Category:           Language

Executable supercompile
    Main-Is:        Main.hs
    Build-Depends:  base >= 4 && < 5, containers >= 0.3 && < 0.5, deepseq >= 1.1.0.0 && < 1.2,
                    pretty >= 1.0.1.1 && < 1.1, prettyclass >= 1 && < 1.2,
                    haskell-src-exts >= 1.9.0 && < 1.11.0
